# treasuremit

./: .gitignore  Procfile  README.md  heroku.yml  package-lock.json  package.json
treasuremit/: next.config.js  package-lock.json  package.json  tsconfig.json
treasuremit/components/: Avatar.js  LogNavBar.js  MainNavBar.js  Map.js  MitMap.js  NavBar.js  TreasureCard.js
treasuremit/public/: fake_treasures.json
treasuremit/serv/: dbConnect.js
treasuremit/server/: api.js  auth.js  server.js
treasuremit/src/: utilities.js
treasuremit/src/pages/: _app.tsx  _document.js  chest.js  index.tsx  login.tsx  logout.js  profile.js  redirect.js  treasuremap.js
treasuremit/src/pages/api/: treasure.js  users.js
treasuremit/src/pages/api/models/: Treasure.js  User.js
treasuremit/src/styles/: Avatar.module.css  NavBar.module.css  TreasureCard.module.css  globals.css
waldobook/: Dockerfile  Procfile  README.md  pyproject.toml  sql_app.db
waldobook/tests/: test_wheresapi.py
waldobook/waldobook/: crud.py  database.py  main.py  models.py  schemas.py
